# kraken-tui

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  devenv.nix
.github/workflows/: ci.yml  release.yml
audit/: run-example.ts
docs/: Architecture.md  CLAUDE.md  GatePolicy.md  PRD.md  Tasks.md  TechSpec.md
docs/api/: rust-c-api.md  solid-reconciler.md  typescript-api.md  widget-catalog.md
examples/: AGENTS.md  accessibility-demo.tsx  agent-console.ts  demo.ts  migration-jsx.tsx  ops-log-console.ts  repo-inspector.ts  showcase.ts  system-monitor.ts
native/: CLAUDE.md  Cargo.toml
native/benches/: devtools_bench.rs  text_cache_bench.rs  text_substrate_bench.rs  threaded_render_bench.rs  writer_bench.rs
native/fixtures/: bordered_box.golden  empty_screen.golden  input_with_cursor.golden  nested_layout.golden  single_text_node.golden  text_renderer_unicode_mixed.golden
native/src/: animation.rs  context.rs  devtools.rs  edit_buffer.rs  event.rs  golden.rs  layout.rs  lib.rs  render.rs  scroll.rs  splitpane.rs  style.rs  substrate_gates.rs  terminal.rs  terminal_capabilities.rs  text.rs  text_buffer.rs  text_cache.rs  text_renderer.rs  text_utils.rs  text_view.rs  textarea.rs  theme.rs  threaded_render.rs  transcript.rs  tree.rs  types.rs  writer.rs
spike-ffi/: Cargo.toml  test-ffi.ts
ts/: CLAUDE.md  bench-ffi.ts  bench-render.ts  check-bundle.ts  check-substrate-benchmarks.ts  guardrails-ffi.ts  package.json  test-examples.test.ts  test-ffi.test.ts  test-ffi.ts  test-install.test.ts  test-jsx.test.ts  test-runner.test.ts  tsconfig.json
(+62 files in other folders)
