[package]
name = "kraken_tui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
threaded-render = []

[dependencies]
taffy = "0.9"
crossterm = "0.29"
pulldown-cmark = "0.13"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
bitflags = "2"
unicode-width = "0.2"
unicode-segmentation = "1.12"
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "text_cache_bench"
harness = false

[[bench]]
name = "writer_bench"
harness = false

[[bench]]
name = "threaded_render_bench"
harness = false
